# gbM

./: .gitignore  Init.make.in  Makefile.in  README  configure.ac
src/: CalculMGI.odp  CalculMG_MGI_PR2.odp  Makefile.in  Proto_gb.h  Proto_gbModeles.h  gb.c  gbGENOM.h  gbModeles.c  gbStruct.h  gbmKukaLbr.c  gbmPr2.c
tcl/: Makefile.in  gb.tcl  mkIndex.in  pkgIndex.tcl
tclsrc/: Makefile.in  gb.i  gbModeles.i
